Fix hover suffix spacing in splash title

--- a/next-site/app/splash.module.css
+++ b/next-site/app/splash.module.css
@@ -185,6 +185,7 @@
 .titleLineAccentSuffix {
   grid-area: 1 / 1;
   display: inline-block;
+  margin-left: 0.28ch;
   color: #1743ab;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.28);
   will-change: transform, opacity;
